--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         </activity>
         <activity
             android:name=".ListarLivrosActivity"
-            android:label="@string/title_activity_listar_livros">
-        </activity>
+            android:label="@string/title_activity_listar_livros"></activity>
+        <activity android:name=".CadastrarLembreteActivity"></activity>
     </application>
 
 </manifest>
