--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thiagoyf.lembretedeleituradelivros">
 
+    <uses-sdk
+        android:maxSdkVersion="24"
+        android:minSdkVersion="16"
+        android:targetSdkVersion="24" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/bookmark"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -20,18 +25,15 @@
 
         <activity
             android:name=".CadastrarLivroActivity"
-            android:label="@string/title_activity_cadastrar_livro">
-        </activity>
+            android:label="@string/title_activity_cadastrar_livro"></activity>
 
         <activity
             android:name=".ListarLivrosActivity"
-            android:label="@string/title_activity_listar_livros">
-        </activity>
+            android:label="@string/title_activity_listar_livros"></activity>
 
         <activity
             android:name=".CadastrarLembreteActivity"
-            android:label="@string/title_activity_cadastrar_lembrete">
-        </activity>
+            android:label="@string/title_activity_cadastrar_lembrete"></activity>
     </application>
 
 </manifest>
