--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thiagoyf.lembretedeleituradelivros">
+          package="com.thiagoyf.lembretedeleituradelivros">
 
     <uses-sdk
         android:maxSdkVersion="24"
         android:minSdkVersion="16"
-        android:targetSdkVersion="22" />
+        android:targetSdkVersion="22"/>
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -17,23 +17,22 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".CadastrarLivroActivity"
-            android:label="@string/title_activity_cadastrar_livro"></activity>
-
+            android:label="@string/title_activity_cadastrar_livro"/>
         <activity
             android:name=".ListarLivrosActivity"
-            android:label="@string/title_activity_listar_livros"></activity>
-
+            android:label="@string/title_activity_listar_livros"/>
         <activity
             android:name=".CadastrarLembreteActivity"
-            android:label="@string/title_activity_cadastrar_lembrete"></activity>
+            android:label="@string/title_activity_cadastrar_lembrete"/>
+        <activity android:name=".ListarLembretesActivity">
+        </activity>
     </application>
 
 </manifest>
