--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,14 @@
           package="com.thiagoyf.lembretedeleituradelivros">
 
     <uses-sdk
-        android:maxSdkVersion="24"
+        android:maxSdkVersion="22"
         android:minSdkVersion="16"
         android:targetSdkVersion="22"/>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -32,6 +35,8 @@
             android:name=".CadastrarLembreteActivity"
             android:label="@string/title_activity_cadastrar_lembrete"/>
         <activity android:name=".ListarLembretesActivity">
+        </activity>
+        <activity android:name=".LembreteActivity">
         </activity>
     </application>
 
