--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="22"/>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -39,6 +40,7 @@
             android:name=".LembreteActivity"
             android:label="@string/title_activity_lembrete">
         </activity>
+        <receiver android:name=".NotificationReceiver"/>
     </application>
 
 </manifest>
